--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,38 @@
 spring:
+  sql:
+    init:
+      mode: always
+#      schema-locations: classpath:db/migration/V1__Initial_schema.sql
+#      data-locations: db/migration/V2__Initial_data.sql
+  datasource:
+    username: postgres
+    password: postgres
+    url: jdbc:postgresql://localhost:5432/polardb_catalog
+    hikari:
+      connection-timeout: 2000 #ms
+      maximum-pool-size: 5
   application:
     name: catalog-service
+  config:
+    import: "optional:configserver:"
+  cloud:
+    config:
+      uri: http://localhost:8888
+      request-connect-timeout: 5000 # 5s
+      request-read-timeout: 5000 # 5s
+      fail-fast: false # In production, set to true
+      retry:
+        max-attempts: 6
+        initial-interval: 1000 # 1s
+        max-interval: 2000 # 2s
+        multiplier: 1.1
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
+
 server:
   port: 9001
   tomcat:
@@ -9,3 +41,6 @@ server:
     threads:
       max: 15
       min-spare: 5
+
+polar:
+  greeting: Welcome to the local book catalog!
