--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ java {
 ext {
     set('springCloudVersion', "2023.0.2")
     set('testcontainersVersion', "1.19.8")
+    set('testKeycloakVersion', "3.3.1")
 }
 
 configurations {
@@ -39,6 +40,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.flywaydb:flyway-database-postgresql'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
@@ -48,7 +50,10 @@ dependencies {
     testImplementation("org.springframework.cloud:spring-cloud-stream-test-binder")
     testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:postgresql'
+    testImplementation "com.github.dasniko:testcontainers-keycloak:${testKeycloakVersion}"
 }
 
 dependencyManagement {
